<resources>
    <string name="app_name">BapotoDriver</string>
    <string name="content_de_vous_revoir">Content de vous revoir !</string>
    <string name="enregistrez_vous_pour_continuer">Enregistrez vous pour continuer</string>
    <string name="email">Email</string>
    <string name="Password">Mot de passe</string>
    <string name="create_new_account">Créer un nouveau compte</string>
    <string name="sign_in">CONNEXION</string>
    <string name="add_image">Ajouter photo</string>
    <string name="name">Nom</string>
    <string name="conrfirm_password">Confirmation mot de passe</string>
    <string name="sign_up">Créer un compte</string>
    <string name="select_user">Choisir un utilisateur</string>
    <string name="on_line">En ligne</string>
    <string name="admin">admin</string>
    <string name="administrateur_bapoto">Administrateur Bapoto</string>
    <string name="entrez_password_to_continue">Entrez mot de passe pour continuer</string>

    <string name="infos">Infos</string>
    <string name="drop_off">Destination</string>
    <string name="pick_up">RDV</string>
    <string name="hour">Heure</string>
    <string name="date">Date</string>
    <string name="new_booking">Entrer Nouvelle Reservation</string>
    <string name="ok">OK</string>
    <string name="r_servations">Réservations</string>
    <string name="r_servations_available">Réservations Disponibles</string>
    <string name="price">Prix</string>
    <string name="new_admin">Nouvel Admin</string>
    <string name="administrateur">ADMINISTRATEUR</string>
    <string name="select_admin">Choisir un admin</string>
    <string name="choose_a_driver">Choisir un Chauffeur</string>
    <string name="choose_a_admin">Choisir un admin</string>
    <string name="date_fin_de_course">Date fin de course</string>
    <string name="r_servation_termin_es">Réservation Terminées</string>
    <string name="notification_channel_id">my canal</string>
    <string name="notification_channel_title">my titile</string>
    <string name="notification_channel_descrption">canal de test</string>
    <string name="mes_r_servations_termin_es">Mes Réservations Terminées</string>
</resources>